--- a/app/src/main/res/layout/content_tip.xml
+++ b/app/src/main/res/layout/content_tip.xml
@@ -33,7 +33,8 @@
         android:hint="@string/main.hint.percentage"
         android:ems="10"
         android:id="@+id/inputPercentage"
-        android:layout_alignLeft="@+id/inputBill"
+        android:layout_alignStart="@+id/inputBill"
+        android:layout_alignLeft= "@+id/inputBill"
         android:layout_below="@id/inputBill"
         />
 
@@ -77,6 +78,7 @@
         android:id="@+id/separator"
         android:layout_below="@id/btnClear"
         android:layout_alignEnd="@id/btnSubmit"
+        android:layout_alignStart="@+id/inputBill"
         android:layout_alignLeft="@id/btnClear"
         android:layout_alignRight="@id/btnSubmit"
         />
@@ -84,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/txtTip"
         android:layout_below="@+id/separator"
         android:visibility="gone"
